Allow $TMPDIR to set temporary directory on OS X.

This allows the continuous integration builds to be more hermetic by
supplying a managed value for $TMPDIR and having chromium + tests respect
it.

NSTemporaryDirectory takes its value directly from a non-overridable
confstr(_CS_DARWIN_USER_TEMP_DIR) call internally. This CL brings OS X
more in line with Windows and Linux which both respect an environment
variable ($TEMP and $TMPDIR respectively).

BUG=696803

Review-Url: https://codereview.chromium.org/2713293002
Cr-Commit-Position: refs/heads/master@{#453835}