remoting/host/mac/me2me_preference_pane.mm
@@ -18,6 +18,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <fstream>
 #include <memory>
 
+#include "base/files/file_util.h"
 #include "base/mac/authorization_util.h"
 #include "base/mac/launchd.h"
 #include "base/mac/mac_logging.h"
@@ -34,12 +35,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace {
 
 bool GetTemporaryConfigFilePath(std::string* path) {
-  NSString* filename = NSTemporaryDirectory();
-  if (filename == nil)
-    return false;
+  base::FilePath ret;
 
-  *path = [[NSString stringWithFormat:@"%@/%s",
-            filename, remoting::kHostConfigFileName] UTF8String];
+  if (!base::GetTempPath(&ret)) {
+    return false;
+  }
+
+  ret = ret.Append(remoting::kHostConfigFileName);
+
+  // This should be safe on OS X because utf8 is always supported.
+  *path = ret.AsUTF8Unsafe();
   return true;
 }
 
